--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="selector-card" data-link="https://satyam1007.github.io/kinder-garden/">
                 <h3>Kindergarten</h3>
             </div>
-            <div class="selector-card" data-link="primary.html">
+            <div class="selector-card" data-link="https://satyam1007.github.io/primary-wing/">
                 <h3>Primary Wing</h3>
             </div>
-            <div class="selector-card" data-link="senior.html">
+            <div class="selector-card" data-link="https://satyam1007.github.io/attandance-web-app/">
                 <h3>Senior School</h3>
             </div>
         </div>
